basic setup done

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     />
     <link rel="stylesheet" href="./css/Style.css" />
     <link rel="stylesheet" href="./css/navbar.css" />
+    <link rel="stylesheet" href="./css//video.css" />
     <title>YoutubeClone</title>
   </head>
   <body>
     <!------------ Navabar---------------->
-
     <nav class="main-container">
       <div class="left-conatainer">
         <div><i class="fa-solid fa-bars"></i></div>
@@ -32,5 +32,17 @@
         <div>Image</div>
       </div>
     </nav>
+    <section class="mainVideo-container">
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+      <div>image</div>
+    </section>
   </body>
 </html>
