--- a/index.html
+++ b/index.html
@@ -13,26 +13,34 @@
     <title>YoutubeClone</title>
   </head>
   <body>
-    <!------------ Navabar---------------->
+    <!--------------------- Navabar starts from here  -------------------------->
     <nav class="main-container">
       <div class="left-conatainer">
         <div><i class="fa-solid fa-bars"></i></div>
         <div><i class="fa-brands fa-youtube"></i></div>
       </div>
       <div class="center-conatainer">
-        <div>
+        <div id="search">
           <input type="text" placeholder="Search" />
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
         <div><i class="fa-solid fa-microphone"></i></div>
       </div>
       <div class="right-conatainer">
-        <div>create</div>
-        <div>Notifiaction</div>
-        <div>Image</div>
+        <div><i class="fa-solid fa-circle-plus"></i></div>
+        <div><i class="fa-solid fa-bell"></i></div>
+        <div>
+          <img
+            id="profile-image"
+            src="./images/profile-img.jpg"
+            alt="profile-img"
+          />
+        </div>
       </div>
     </nav>
-    <section class="mainVideo-container">
+    <!--------------------- Navabar Ends here  -------------------------->
+
+    <!-- <section class="mainVideo-container">
       <div>image</div>
       <div>image</div>
       <div>image</div>
@@ -43,6 +51,6 @@
       <div>image</div>
       <div>image</div>
       <div>image</div>
-    </section>
+    </section> -->
   </body>
 </html>
