--- a/index.html
+++ b/index.html
@@ -40,17 +40,47 @@
     </nav>
     <!--------------------- Navabar Ends here  -------------------------->
 
-    <!-- <section class="mainVideo-container">
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-      <div>image</div>
-    </section> -->
+    <!---------------------content part starts from here ---------------->
+    <section class="content">
+      <div class="sideBar">
+        <div><i class="fa-solid fa-house"></i></div>
+        <div><i class="fa-solid fa-video"></i></div>
+        <div><i class="fa-solid fa-video"></i></div>
+        <div><i class="fa-solid fa-video"></i></div>
+      </div>
+      <div class="video">
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name">Vijay Kumar T  <i class="fa-solid fa-certificate"></i></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+        <div>image</div>
+      </div>
+    </section>
   </body>
 </html>
