added new grid data

--- a/index.html
+++ b/index.html
@@ -43,10 +43,33 @@
     <!---------------------content part starts from here ---------------->
     <section class="content">
       <div class="sideBar">
-        <div><i class="fa-solid fa-house"></i></div>
-        <div><i class="fa-solid fa-video"></i></div>
-        <div><i class="fa-solid fa-video"></i></div>
-        <div><i class="fa-solid fa-video"></i></div>
+        <div>
+          <img src="./images/home.png" alt="home" width="30px" height="30px" />
+        </div>
+        <div>
+          <img
+            src="./images/photo-capture.png"
+            alt="home"
+            width="30px"
+            height="30px"
+          />
+        </div>
+        <div>
+          <img
+            src="./images/subscribe.png"
+            alt="home"
+            width="30px"
+            height="30px"
+          />
+        </div>
+        <div>
+          <img
+            src="./images/youtube.png"
+            alt="home"
+            width="30px"
+            height="30px"
+          />
+        </div>
       </div>
       <div class="video">
         <div class="video-sub">
@@ -64,22 +87,375 @@
                 <p>
                   macbook air m2 (space gray) unboxing 📦 | customizing &
                   accessories <br />
-                  <span class="name">Vijay Kumar T  <i class="fa-solid fa-certificate"></i></span>
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
                   <span> 3 hours ago</span>
                 </p>
               </div>
             </section>
           </div>
         </div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
-        <div>image</div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/profile-img.jpg"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  macbook air m2 (space gray) unboxing 📦 | customizing &
+                  accessories <br />
+                  <span class="name"
+                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 3 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
       </div>
     </section>
   </body>
