--- a/index.html
+++ b/index.html
@@ -98,19 +98,64 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/hq720 (1).jpg" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/hq720 (1).jpg"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  iphone unboxing <br />
+                  <span class="name"
+                    >Technical guruji <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 4 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/Faisal_Khan.avif" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/Faisal_Khan.avif"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  car review <br />
+                  <span class="name"
+                    >Faisal khan <i class="fa-solid fa-certificate"></i
+                  ></span>
+                  <span> 5 hours ago</span>
+                </p>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="video-sub">
+          <div>
+            <img src="./images/original.png" alt="" id="main-video" />
+
+            <section id="video-description">
+              <img
+                src="./images/original.png"
+                alt=""
+                width="50px"
+                height="50px"
+              />
+              <div>
+                <p>
+                  office tour <br />
                   <span class="name"
                     >Vijay Kumar T <i class="fa-solid fa-certificate"></i
                   ></span>
@@ -122,21 +167,20 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/images.jpeg" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/images.jpeg"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  tanmay bhat<br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >tanmay bhat <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -146,21 +190,20 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/QT-Gaurav-Taneja.jpeg" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/QT-Gaurav-Taneja.jpeg"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  flying beast <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >gaurav taneja <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -170,21 +213,20 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/mrbeast.jpg_large" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/mrbeast.jpg_large"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  mr beast <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >mr beast <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -194,21 +236,20 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/carry.jpeg" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/carry.jpeg"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  carryminati <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >ajay nagar<i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -218,7 +259,7 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/Ashish-Chanchlani.webp" alt="" id="main-video" />
 
             <section id="video-description">
               <img
@@ -229,10 +270,9 @@
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  ashish <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >ashish chanchalani <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -242,21 +282,24 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img
+              src="./images/split-images-of-deadpool-and-wolverine.avif"
+              alt=""
+              id="main-video"
+            />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/split-images-of-deadpool-and-wolverine.avif"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  deadpool wolverine <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >marvel <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -266,21 +309,24 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img
+              src="./images/LORD-PUNEET-BIG_64ad3fe77e841.webp"
+              alt=""
+              id="main-video"
+            />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/LORD-PUNEET-BIG_64ad3fe77e841.webp"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  puneet superstar lord<br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >puneet <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -290,21 +336,15 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/bb.jpg" alt="" id="main-video" />
 
             <section id="video-description">
-              <img
-                src="./images/profile-img.jpg"
-                alt=""
-                width="50px"
-                height="50px"
-              />
+              <img src="./images/bb.jpg" alt="" width="50px" height="50px" />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  bb ki vines <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >Bhuvan bam <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -314,21 +354,15 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/kk1.jpg" alt="" id="main-video" />
 
             <section id="video-description">
-              <img
-                src="./images/profile-img.jpg"
-                alt=""
-                width="50px"
-                height="50px"
-              />
+              <img src="./images/kk1.jpg" alt="" width="50px" height="50px" />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  java online <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >kunal kushwa <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -338,21 +372,15 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/nsync.jpg" alt="" id="main-video" />
 
             <section id="video-description">
-              <img
-                src="./images/profile-img.jpg"
-                alt=""
-                width="50px"
-                height="50px"
-              />
+              <img src="./images/nsync.jpg" alt="" width="50px" height="50px" />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  bye bye bye <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >nsync <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -362,21 +390,20 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/one direction.jpg" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/one direction.jpg"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  drag me down <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >1D <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
@@ -386,69 +413,20 @@
         </div>
         <div class="video-sub">
           <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
+            <img src="./images/speed.jfif" alt="" id="main-video" />
 
             <section id="video-description">
               <img
-                src="./images/profile-img.jpg"
+                src="./images/speed.jfif"
                 alt=""
                 width="50px"
                 height="50px"
               />
               <div>
                 <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
+                  speed <br />
                   <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
-                  ></span>
-                  <span> 3 hours ago</span>
-                </p>
-              </div>
-            </section>
-          </div>
-        </div>
-        <div class="video-sub">
-          <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
-
-            <section id="video-description">
-              <img
-                src="./images/profile-img.jpg"
-                alt=""
-                width="50px"
-                height="50px"
-              />
-              <div>
-                <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
-                  <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
-                  ></span>
-                  <span> 3 hours ago</span>
-                </p>
-              </div>
-            </section>
-          </div>
-        </div>
-        <div class="video-sub">
-          <div>
-            <img src="./images/profile-img.jpg" alt="" id="main-video" />
-
-            <section id="video-description">
-              <img
-                src="./images/profile-img.jpg"
-                alt=""
-                width="50px"
-                height="50px"
-              />
-              <div>
-                <p>
-                  macbook air m2 (space gray) unboxing 📦 | customizing &
-                  accessories <br />
-                  <span class="name"
-                    >Vijay Kumar T <i class="fa-solid fa-certificate"></i
+                    >ishowspeed <i class="fa-solid fa-certificate"></i
                   ></span>
                   <span> 3 hours ago</span>
                 </p>
